<resources>
    <string name="app_name">SmartSchedule</string>
    <string name="registActivity_title">스케줄 등록</string>
    <string name="detailActivity_title">스케줄 확인</string>

    <string name="schedule_title">스케줄 제목</string>
    <string name="schedule_description">스케줄 설명</string>
    <string name="schedule_location">위치</string>
    <string name="schedule_participant">참여자</string>
    <string name="schedule_allDay">하루 종일</string>
    <string name="schedule_start">시작</string>
    <string name="schedule_end">종료</string>
    <string name="schedule_startAlarm">출발 알림</string>
    <string name="schedule_callAlarm">전화 알림</string>

    <string name="title_hint">제목을 입력 해주세요</string>
    <string name="desc_hint">설명을 입력 해주세요</string>
    <string name="location_hint">위치를 입력해 주세요</string>
    <string name="participant_hint">참여자를 추가해 주세요</string>
    <string name="start_hint">시작 시간을 선택 해주세요</string>
    <string name="end_hint">종료 시간을 선택 해주세요</string>

    <string name="location_search">탐색</string>

    <string name="database_transaction_success">트랜잭션 성공!!</string>

    <string name="title_activity_maps">주소 등록</string>

    <string name="title_activity_reminder">리마인더</string>

    <string name="error_message_editText">필수 항목을 채워 주셔야 합니다</string>
    <string name="error_message_address">주소를 검색 해 주셔야 합니다</string>
    <string name="error_message_timePicker">잘못 된 시간 설정 입니다</string>
    <string name="error_message_reminder">알림 시점을 설정 해 주셔야 합니다</string>

    <string name="error_message_location">GPS 접근을 허용 해 주셔야 합니다</string>
    <string name="error_message_fail_data">이동 정보를 저장하지 못했습니다</string>
    <string name="error_message_fail_server">서버 접속이 원활하지 못합니다</string>
    <string name="error_message_no_data">경로를 확인 할 스케줄이 없습니다</string>
    <string name="error_message_no_address">주소를 입력 해 주셔야 합니다 </string>
    <string name="message_is_updated">모두 최신 정보 입니다</string>

    <string name="reminder_type_onTime">정시</string>
    <string name="reminder_type_1hour">1시간전  </string>
    <string name="reminder_type_1day">1일전  </string>
    <string name="reminder_type_noItem">알림 없음</string>

    <string name="bottom_sheet_remove">지난일정 삭제</string>
    <string name="bottom_sheet_time">일정 순</string>
    <string name="bottom_sheet_distance">거리 순</string>
    <string name="bottom_sheet_departure">출발시간 순</string>
    <string name="bottom_sheet_today">오늘 날짜로</string>

</resources>
